<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/game_logo"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="400dp"
        app:layout_constraintWidth_percent=".6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:text="@string/start"
        android:transitionName="button_trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="@color/orange_a400"
        android:text="@string/about"
        android:transitionName="button_trans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>